--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#home">Home</a>
             <a href="#about">About Us</a>
             <a href="#products">Products</a>    
-            <a href="#review">About</a>
+            <a href="#review">Review</a>
             <a href="#contact">Contact</a>
         </nav>
 
